# MindType

./: .cursorrules  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  Justfile  MIND_FLOW_MASTER_DOCUMENTATION.md  README.md  eslint.config.js  index.ts  lint-staged.config.mjs  optimized-cursor-prompt.md  package.json  pnpm-lock.yaml  specs.md  tsconfig.json  vitest.config.ts
.cursor/: rules.md
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
config/: defaultThresholds.ts
contracts/: animTokens.js  animTokens.ts
core/: activeRegion.ts  activeRegionPolicy.ts  caretMonitor.ts  confidenceGate.ts  diagnosticsBus.ts  diffusionController.ts  languageDetection.ts  logger.ts  security.ts  stagingBuffer.ts  sweepScheduler.ts  tapestry.ts  typingMonitor.ts  undoIsolation.ts
coverage/: clover.xml  coverage-final.json  index.html
crates/core-rs/: Cargo.toml  README.md  cbindgen.toml
crates/core-rs/src/: active_region.rs  caret_monitor.rs  confidence.rs  diff.rs  diffusion.rs  engine.rs  ffi.rs  fragment.rs  language_detection.rs  lib.rs  llm.rs  logger.rs  merge.rs  pause_timer.rs  scheduler.rs  tapestry.rs
crates/core-rs/src/lm/: client.rs  factory.rs  merge.rs  mod.rs  stream.rs
crates/core-rs/src/workers/: context.rs  mod.rs  tone.rs
crates/core-rs/tests/: lm.rs  lm_stream.rs
datasets/: eval.jsonl  fuzzy_text_en.full.jsonl  fuzzy_text_en.jsonl  train.jsonl
demo/: README.md
docs/: ADHD-docs.md  ADHD-docs.txt  DOCUMENTATION_OVERHAUL_STATUS.md  PRD.md  README.md  architecture.mmd  backlog.md  (+18 more)
(+626 files in other folders)
