[package]
name = "core-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["wasmbind"] }
unicode-segmentation = "1.10.0"
async-trait = "0.1.58"
env_logger = "0.9"
wasm-bindgen = "0.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
